k8s/frontend.yaml
# nginx Web Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx

spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: ghcr.io/2425-4bhitm-itp/eispunkt-frontend:latest
          # remove imagePullPolicy when stable. Currently we do not take care of version numbers
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /index.html
              port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx
