k8s/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: ghcr.io/2425-4bhitm-itp/eispunkt-keycloak:latest
          imagePullPolicy: IfNotPresent
          command:
            - /opt/keycloak/bin/kc.sh
          args:
            - start-dev
            - --db=postgres
            - --db-url=jdbc:postgresql://postgres:5432/keycloak
            - --db-username=keycloak
            - --db-password=keycloak
            - --http-enabled=true
            - --health-enabled=true
            - --metrics-enabled=true
            - --proxy-headers=forwarded
            - --import-realm
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8000
      targetPort: 8080
