k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leocloud-eispunkt-root
spec:
  ingressClassName: nginx
  rules:
    - host: it200230.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: appsrv
                port:
                  number: 8080
          - path: /echo
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80
